dataset1235/2025-2/2947369575/users/3893556986/executions/1003782500_2383239197.log
== SUBMISSION (2025-09-01 22:52:41)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians(angulo)

c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:50:18)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians (angulo)

c math.sqrt(a**2-2 *a*b*math.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-2 *a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-2 *a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-2 *a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-2 *a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-2 *a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-2 *a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:53:05)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians(angulo)

c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.27
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:51:34)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians (angulo)

c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:52:42)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians(angulo)

c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:51:44)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians (angulo)

c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:51:45)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians (angulo)

c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:51:33)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians (angulo)

c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    c math.sqrt(a**2-b**2-2*a*bmath.cos(rad))
      ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:53:04)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians(angulo)

c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.27
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(a**2-b**2-2*a*b*math.cos(rad))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:53:20)
-- CODE: 
import math
a = float (input())
b = float (input())
angulo = float (input())

rad = math.radians(angulo)

c = math.sqrt(a**2+b**2-2*a*b*math.cos(rad))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
